force-app/main/default/objects/Case/fields/ItemizedFederalRefund__c.field-meta.xml
<CustomField>
    <fullName>ItemizedFederalRefund__c</fullName>
    <label>Federal Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>