force-app/main/default/objects/Case/fields/ItemizedTotalRefund__c.field-meta.xml
<CustomField>
    <fullName>ItemizedTotalRefund__c</fullName>
    <formula>ItemizedFederalRefund__c + ItemizedStateRefund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>