force-app/main/default/objects/Case/fields/StandardizedFederalRefund__c.field-meta.xml
<CustomField>
    <fullName>StandardizedFederalRefund__c</fullName>
    <label>Federal Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>