force-app/main/default/objects/Case/fields/StandardizedStateRefund__c.field-meta.xml
<CustomField>
    <fullName>StandardizedStateRefund__c</fullName>
    <label>State Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>