force-app/main/default/objects/Case/fields/StandardizedTotalRefund__c.field-meta.xml
<CustomField>
    <fullName>StandardizedTotalRefund__c</fullName>
    <formula>StandardizedStateRefund__c + StandardizedFederalRefund__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Refund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>