force-app/main/default/objects/Case/fields/tx_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>tx_Contact_Email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>