force-app/main/default/objects/Case/fields/txContactMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>txContactMobilePhone__c</fullName>
    <label>Contact Mobile Phone</label>
    <type>Phone</type>
</CustomField>