force-app/main/default/objects/Case/fields/txVisaStatus__c.field-meta.xml
<CustomField>
    <fullName>txVisaStatus__c</fullName>
    <label>Visa Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>