force-app/main/default/objects/Case/fields/VisaStatusFormula__c.field-meta.xml
<CustomField>
    <fullName>VisaStatusFormula__c</fullName>
    <formula>TEXT(Contact.Tx_VisaStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VisaStatusFormula</label>
    <type>Text</type>
</CustomField>