force-app/main/default/objects/Case/recordTypes/Taxation.recordType-meta.xml
<RecordType>
    <fullName>Taxation</fullName>
    <active>true</active>
    <businessProcess>Taxation</businessProcess>
    <label>Taxation</label>
</RecordType>