force-app/main/default/objects/Case/recordTypes/Zendesk.recordType-meta.xml
<RecordType>
    <fullName>Zendesk</fullName>
    <active>false</active>
    <businessProcess>Taxation</businessProcess>
    <label>Zendesk</label>
</RecordType>